fix: fixed the floating expand/collapse button not visible issu

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,7 +78,7 @@
 }
 
 @layer utilities {
-  [data-tooltip] {
+  [data-tooltip]:not(.fixed):not(.absolute):not(.sticky) {
     position: relative;
   }
 
